syntax = "proto3";

package gnss;

option java_package = "dezz.gnssshare.proto";
option java_outer_classname = "LocationProto";

message ServerResponse {
    string status = 1;
    int32 satellites = 2;
    optional LocationUpdate location_update = 3;
}

message LocationUpdate {
  int64 timestamp = 1;           // Unix timestamp in milliseconds
  double latitude = 2;
  double longitude = 3;
  double altitude = 4;
  float accuracy = 5;            // Horizontal accuracy in meters
  float bearing = 6;             // Degrees from north
  float speed = 7;               // m/s
  string provider = 9;           // "gps", "network", "fused", etc.
  float location_age = 10;       // Seconds since fix
}
